RESOLVED FIXED131968
WebProfilerAgent::disable is calling the wrong superclass method
https://bugs.webkit.org/show_bug.cgi?id=131968
Summary WebProfilerAgent::disable is calling the wrong superclass method
Joseph Pecoraro
Reported 2014-04-21 19:49:11 PDT
Looks like disable is calling enable!
Attachments
[PATCH] Proposed Fix (1.12 KB, patch)
2014-04-21 19:50 PDT, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2014-04-21 19:49:38 PDT
Joseph Pecoraro
Comment 2 2014-04-21 19:50:39 PDT
Created attachment 229853 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 3 2014-04-21 20:26:50 PDT
Comment on attachment 229853 [details] [PATCH] Proposed Fix Clearing flags on attachment: 229853 Committed r167647: <http://trac.webkit.org/changeset/167647>
WebKit Commit Bot
Comment 4 2014-04-21 20:26:53 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.