WebProfilerAgent::disable is calling the wrong superclass method https://bugs.webkit.org/show_bug.cgi?id=131968

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2014-04-21
Reviewed by Simon Fraser.

* inspector/WebProfilerAgent.cpp:
(WebCore::WebProfilerAgent::disable):

Canonical link: https://commits.webkit.org/150065@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167647 268f45cc-cd09-0410-ab3c-d52691b4dbfc